bindings/c/whiteout_textures.h


typedef struct whiteout_Texture whiteout_Texture;
typedef struct whiteout_BlpParser whiteout_BlpParser;
typedef struct whiteout_BlpWriter whiteout_BlpWriter;
typedef struct whiteout_PngApngFrameInfo whiteout_PngApngFrameInfo;
whiteout_Texture* whiteout_textures_Texture_new(void);
void whiteout_textures_Texture_delete(whiteout_Texture* self);
void whiteout_textures_Texture_format(whiteout_Texture* self, int32_t new_fmt);
int32_t whiteout_textures_Texture_format_overload2(const whiteout_Texture* self);
struct whiteout_Texture* whiteout_textures_Texture_copyAsFormat(const whiteout_Texture* self, int32_t new_fmt, void* pool);
struct whiteout_Texture* whiteout_textures_Texture_copyFromNormalToRGBA(const whiteout_Texture* self, void* pool);
whiteout_CString whiteout_textures_Texture_generateMipmaps(whiteout_Texture* self, uint32_t newMipCount, void* pool);
whiteout_CString whiteout_textures_Texture_generateMipmaps_pool(whiteout_Texture* self, void* pool);
whiteout_CString whiteout_textures_Texture_downscale(whiteout_Texture* self, uint32_t levels, void* pool);
struct whiteout_Texture* whiteout_textures_Texture_create2D(int32_t fmt, uint32_t width, uint32_t height, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_create3D(int32_t fmt, uint32_t width, uint32_t height, uint32_t depth, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_createCube(int32_t fmt, uint32_t size, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_create2DArray(int32_t fmt, uint32_t width, uint32_t height, uint32_t arraySize, uint32_t mipCount);
struct whiteout_Texture* whiteout_textures_Texture_createCubeArray(int32_t fmt, uint32_t size, uint32_t arraySize, uint32_t mipCount);
int32_t whiteout_textures_Texture_type(const whiteout_Texture* self);
int32_t whiteout_textures_Texture_isSrgb(const whiteout_Texture* self);
void whiteout_textures_Texture_setSrgb(whiteout_Texture* self, int32_t srgb);
uint32_t whiteout_textures_Texture_width(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_height(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_depth(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_layerCount(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_arraySize(const whiteout_Texture* self);
uint32_t whiteout_textures_Texture_mipCount(const whiteout_Texture* self);
uint64_t whiteout_textures_Texture_dataSize(const whiteout_Texture* self);
whiteout_Bytes whiteout_textures_Texture_data(const whiteout_Texture* self);
whiteout_Bytes whiteout_textures_Texture_mipData(const whiteout_Texture* self, uint32_t mip, uint32_t layer);
whiteout_Bytes whiteout_textures_Texture_takeData(whiteout_Texture* self);
void whiteout_textures_Texture_setData(whiteout_Texture* self, const uint8_t* new_data, size_t new_data_size);
whiteout_BlpParser* whiteout_textures_BlpParser_new(void);
void whiteout_textures_BlpParser_delete(whiteout_BlpParser* self);
struct whiteout_Texture* whiteout_textures_BlpParser_parse(whiteout_BlpParser* self, const uint8_t* buffer, size_t buffer_size);
int32_t whiteout_textures_BlpParser_hasIssues(const whiteout_BlpParser* self);
whiteout_BlpWriter* whiteout_textures_BlpWriter_new(void);
whiteout_BlpWriter* whiteout_textures_BlpWriter_new_pool(void* pool);
void whiteout_textures_BlpWriter_delete(whiteout_BlpWriter* self);
whiteout_Bytes whiteout_textures_BlpWriter_write(whiteout_BlpWriter* self, struct whiteout_Texture* texture);
int32_t whiteout_textures_BlpWriter_hasIssues(const whiteout_BlpWriter* self);
whiteout_PngApngFrameInfo* whiteout_textures_PngApngFrameInfo_new(void);
void whiteout_textures_PngApngFrameInfo_delete(whiteout_PngApngFrameInfo* self);
uint32_t whiteout_textures_PngApngFrameInfo_get_width(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_width(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_height(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_height(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_xOffset(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_xOffset(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_yOffset(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_yOffset(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_delayMs(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_delayMs(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_disposeOp(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_disposeOp(whiteout_PngApngFrameInfo* self, uint32_t value);
uint32_t whiteout_textures_PngApngFrameInfo_get_blendOp(const whiteout_PngApngFrameInfo* self);
void whiteout_textures_PngApngFrameInfo_set_blendOp(whiteout_PngApngFrameInfo* self, uint32_t value);