bindings/java/src/main/java/whiteout/textures/internal/Native.java

// SPDX-License-Identifier: BSD-3-Clause
// AUTOGENERATED by tools/codegen/emit_java.py - do not edit.
package whiteout.textures.internal;

import java.lang.foreign.*;
import java.lang.invoke.MethodHandle;
import whiteout.common.internal.NativeCommon;

/** FFM MethodHandle registry for this module. Internal — for codegen use. */
public final class Native {
    private Native() {}

    public static final MemoryLayout BYTES_LAYOUT = NativeCommon.BYTES_LAYOUT;
    public static final MemoryLayout CSTRING_LAYOUT = NativeCommon.CSTRING_LAYOUT;
    public static final MethodHandle whiteout_Bytes_free = NativeCommon.whiteout_Bytes_free;
    public static final MethodHandle whiteout_CString_free = NativeCommon.whiteout_CString_free;

    static MethodHandle find(String name, FunctionDescriptor fd) {
        return NativeCommon.find(name, fd);
    }

    // -- Texture --
    public static final MethodHandle whiteout_textures_Texture_new = find(
        "whiteout_textures_Texture_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_delete = find(
        "whiteout_textures_Texture_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_format = find(
        "whiteout_textures_Texture_format", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_format_overload2 = find(
        "whiteout_textures_Texture_format_overload2", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_copyAsFormat = find(
        "whiteout_textures_Texture_copyAsFormat", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_copyFromNormalToRGBA = find(
        "whiteout_textures_Texture_copyFromNormalToRGBA", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_generateMipmaps = find(
        "whiteout_textures_Texture_generateMipmaps", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_generateMipmaps_pool = find(
        "whiteout_textures_Texture_generateMipmaps_pool", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_downscale = find(
        "whiteout_textures_Texture_downscale", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_create2D = find(
        "whiteout_textures_Texture_create2D", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_create3D = find(
        "whiteout_textures_Texture_create3D", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_createCube = find(
        "whiteout_textures_Texture_createCube", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_create2DArray = find(
        "whiteout_textures_Texture_create2DArray", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_createCubeArray = find(
        "whiteout_textures_Texture_createCubeArray", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_type = find(
        "whiteout_textures_Texture_type", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_isSrgb = find(
        "whiteout_textures_Texture_isSrgb", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_setSrgb = find(
        "whiteout_textures_Texture_setSrgb", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_width = find(
        "whiteout_textures_Texture_width", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_height = find(
        "whiteout_textures_Texture_height", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_depth = find(
        "whiteout_textures_Texture_depth", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_layerCount = find(
        "whiteout_textures_Texture_layerCount", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_arraySize = find(
        "whiteout_textures_Texture_arraySize", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_mipCount = find(
        "whiteout_textures_Texture_mipCount", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_dataSize = find(
        "whiteout_textures_Texture_dataSize", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_data = find(
        "whiteout_textures_Texture_data", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_mipData = find(
        "whiteout_textures_Texture_mipData", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_Texture_takeData = find(
        "whiteout_textures_Texture_takeData", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_Texture_setData = find(
        "whiteout_textures_Texture_setData", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));

    // -- BlpParser --
    public static final MethodHandle whiteout_textures_BlpParser_new = find(
        "whiteout_textures_BlpParser_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpParser_delete = find(
        "whiteout_textures_BlpParser_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpParser_parse = find(
        "whiteout_textures_BlpParser_parse", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_textures_BlpParser_hasIssues = find(
        "whiteout_textures_BlpParser_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- BlpWriter --
    public static final MethodHandle whiteout_textures_BlpWriter_new = find(
        "whiteout_textures_BlpWriter_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpWriter_new_pool = find(
        "whiteout_textures_BlpWriter_new_pool", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpWriter_delete = find(
        "whiteout_textures_BlpWriter_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpWriter_write = find(
        "whiteout_textures_BlpWriter_write", FunctionDescriptor.of(BYTES_LAYOUT, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_BlpWriter_hasIssues = find(
        "whiteout_textures_BlpWriter_hasIssues", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));

    // -- PngApngFrameInfo --
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_new = find(
        "whiteout_textures_PngApngFrameInfo_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_delete = find(
        "whiteout_textures_PngApngFrameInfo_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_width = find("whiteout_textures_PngApngFrameInfo_get_width", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_width = find("whiteout_textures_PngApngFrameInfo_set_width", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_height = find("whiteout_textures_PngApngFrameInfo_get_height", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_height = find("whiteout_textures_PngApngFrameInfo_set_height", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_xOffset = find("whiteout_textures_PngApngFrameInfo_get_xOffset", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_xOffset = find("whiteout_textures_PngApngFrameInfo_set_xOffset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_yOffset = find("whiteout_textures_PngApngFrameInfo_get_yOffset", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_yOffset = find("whiteout_textures_PngApngFrameInfo_set_yOffset", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_delayMs = find("whiteout_textures_PngApngFrameInfo_get_delayMs", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_delayMs = find("whiteout_textures_PngApngFrameInfo_set_delayMs", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_disposeOp = find("whiteout_textures_PngApngFrameInfo_get_disposeOp", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_disposeOp = find("whiteout_textures_PngApngFrameInfo_set_disposeOp", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_get_blendOp = find("whiteout_textures_PngApngFrameInfo_get_blendOp", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_textures_PngApngFrameInfo_set_blendOp = find("whiteout_textures_PngApngFrameInfo_set_blendOp", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
